| Bug #5146 | Views: avg of a count of a column won't work | ||
|---|---|---|---|
| Submitted: | 23 Aug 2004 0:24 | Modified: | 27 Aug 2004 8:33 |
| Reporter: | Peter Gulutzan | Email Updates: | |
| Status: | Closed | Impact on me: | |
| Category: | MySQL Server | Severity: | S3 (Non-critical) |
| Version: | MySQL version = 5.0.2-alpha-debug | OS: | Linux (SuSE 8.2) |
| Assigned to: | Oleksandr Byelkin | CPU Architecture: | Any |
[23 Aug 2004 0:24]
Peter Gulutzan
[26 Aug 2004 13:36]
Oleksandr Byelkin
ChangeSet 1.1734 04/08/26 14:34:56 bell@sanja.is.com.ua +5 -0 fixed updateability VIEW detection (Bug#5146) fixed other Item_ref methods where result_field involved
[27 Aug 2004 8:33]
Oleksandr Byelkin
Thank you for bug report! Bug is fixed, patch is pushed into our source repository.
