fixed updateability VIEW detection (Bug#5146) fixed other Item_ref methods where result_field involved

mysql-test/r/view.result:
  statements added to distinct in temporary table with a VIEW test
  test of agggregate over aggregate with view
mysql-test/t/view.test:
  statements added to distinct in temporary table with a VIEW test
  test of agggregate over aggregate with view
sql/item.cc:
  fixed other Item_ref methods where result_field involved
sql/item.h:
  fixed other Item_ref methods where result_field involved
sql/sql_lex.cc:
  fixed updateability VIEW detection